--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "md.bootstrappersiandatetimepicker": "^4.1.1",
     "persian-datepicker": "^1.2.0",
     "popper.js": "^1.16.1",
+    "shufflejs": "^6.0.0",
     "sweetalert": "^2.1.2",
     "waypoints": "^4.0.1"
   },
