--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chart.js": "^2.9.3",
     "expose-loader": "^3.1.0",
     "jquery": "^3.6.0",
+    "jquery-easing": "^0.0.1",
     "jquery-ui": "^1.13.1",
     "jquery.easing": "^1.4.1",
     "md.bootstrappersiandatetimepicker": "^4.1.1",
