--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jquery-easing": "^0.0.1",
     "jquery-ui": "^1.13.1",
     "jquery.easing": "^1.4.1",
+    "leaflet": "^1.8.0",
     "md.bootstrappersiandatetimepicker": "^4.1.1",
     "persian-datepicker": "^1.2.0",
     "popper.js": "^1.16.1",
