--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "jquery.easing": "^1.4.1",
     "leaflet": "^1.8.0",
     "md.bootstrappersiandatetimepicker": "^4.1.1",
+    "ol": "^6.14.1",
+    "osm": "^1.0.0",
     "persian-datepicker": "^1.2.0",
     "popper.js": "^1.16.1",
     "shufflejs": "^6.0.0",
