--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jquery-ui": "^1.13.1",
     "jquery.easing": "^1.4.1",
     "leaflet": "^1.8.0",
+    "leaflet-geosearch": "^3.6.1",
     "md.bootstrappersiandatetimepicker": "^4.1.1",
     "ol": "^6.14.1",
     "osm": "^1.0.0",
